--- a/src/assets/style/blocks/_loggingInLoader.scss
+++ b/src/assets/style/blocks/_loggingInLoader.scss
@@ -4,6 +4,7 @@
   right: 0;
   bottom: 0;
   left: 0;
+  opacity: 1;
   z-index: 11;
   display: flex;
   flex-direction: column;
@@ -14,10 +15,6 @@
   overflow: hidden;
   background: white;
   animation-fill-mode: forwards;
-  transition-delay: 0.35s;
-  &.fade-leave-active {
-    transition-delay: 0.5s;
-  }
 
   .headerWrapper {
     position: relative;
